# strategygame

./: .gitignore  Cargo.toml  README.md  gleam.toml  package-lock.json  package.json
api/: gleam.toml  (+1 more)
game/: Cargo.toml  README.md  gleam.toml  manifest.toml  package.json
game/src/: game.gleam  gamemodes.rs  idgen.gleam  lib.rs
game/src/actions/: actions_list.rs  factory.rs  mod.rs
game/src/actions/handlers/: mod.rs  send_ship.rs
game/src/ecs/: entities.gleam  main.gleam  player_actions.gleam  world.gleam  world_utils.gleam
game/src/ecs/entities/: outposts.gleam  players.gleam  ships.gleam  specialists.gleam
game/src/ecs/player_actions/: action_types.gleam  main.gleam
game/src/ecs/systems/: main.gleam  unit_production.gleam
game/src/ecs/utils/: outpost.gleam  player.gleam  ship.gleam  specialist.gleam  world.gleam
game/src/entities/: mod.rs  outpost.rs  player.rs  ship.rs  specialist.rs  world.rs
game/src/entities/outpost/: location.rs  mod.rs  outpost.rs  owner.rs  variant.rs
game/src/outpost/: mod.rs  owner.rs
game/src/player/: mod.rs
game/src/serialize/: mod.rs
game/src/ship/: mod.rs
game/src/specialist/: mod.rs
game/src/systems/: factory.rs  mod.rs
game/src/systems/handlers/: mod.rs
game/src/world/: mod.rs
game/src/worldgen/: empty_grid.gleam  generate_min_points.gleam  generator.gleam  grid_utils.gleam  main.gleam  min_points.gleam  poisson.gleam  world.gleam
game/test/worldgen/: empty_grid_test.gleam  grid_utils_test.gleam
worker/: Cargo.toml  package-lock.json  package.json  wrangler.toml
worker/src/: game.rs  lib.rs
(+65 files in other folders)
