[package]
name = "game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# [profile.release]
# strip = "debuginfo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
derive-new = "0.6.0"
enum-as-inner = "0.6.0"
rand = "0.8.5"
safe-builder-derive = "0.1.1"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_with = "3.8.1"
thiserror = "1.0.59"
typed-builder = "0.18.2"

[dev-dependencies]
pretty_assertions = "1.4.0"
