[package]
name = "worker"
version = "0.1.0"
edition = "2021"
authors = [ "JulianBuse <44533409+JulianBuse@users.noreply.github.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.2.0", features=['http'] }
worker-macros = { version="0.2.0", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"